--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "japanese-holidays": "^1.0.10",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   }
 }
